Setup echo + swagger doc + login
